--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   quiver: ^3.0.0
   flutter_screen_recording: 2.0.8
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
@@ -19,10 +20,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_foreground_task: ^3.7.3
   permission_handler: ^6.0.1
   open_file: ^3.0.1
-
+dependency_overrides:
+  flutter_screen_recording: 
+    path: ../flutter_screen_recording
+  flutter_screen_recording_platform_interface:
+    path: ../flutter_screen_recording_platform_interface
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
